Some minor cleanups to ChatFilterConfig